Fix a weird flicker on next/prev month

--- a/static/vantrash.css
+++ b/static/vantrash.css
@@ -101,6 +101,7 @@ h1 {
 .calendar {
     border-collapse: collapse;
     font-size: 90%;
+    height: 123px;
 }
 .calendar td {
     text-align:center;
